--- a/myweb.yaml
+++ b/myweb.yaml
@@ -23,7 +23,7 @@ spec:
         app: myweb
     spec:
       containers:
-      - image: justmeandopensource/myweb:<TAG>
+      - image: sumitneg/coredocker:<TAG>
         imagePullPolicy: Always
         name: myweb
 
